--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -6,7 +6,7 @@
     <title>CarSearch - Find Your Perfect Car</title>
     
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Header -->
