correct calling of main.js

--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -107,6 +107,6 @@
 </main>
 <script src="./api-js.js"></script>
 <script src="./search-js.js"></script>
-<script src="./main-js.js"></script>
+<script src="../javascript/main.js"></script>
 <script src="./openverse-api.js"></script>
 </html>
