api call service

--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -105,7 +105,7 @@
     </div>
 </div>
 </main>
-<script src="./api-js.js"></script>
+<script src="../javascript/api.js"></script>
 <script src="./search-js.js"></script>
 <script src="../javascript/main.js"></script>
 <script src="./openverse-api.js"></script>
