--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -106,7 +106,7 @@
 </div>
 </main>
 <script src="../javascript/api.js"></script>
-<script src="./search-js.js"></script>
+<script src="../javascript/search.js"></script>
 <script src="../javascript/main.js"></script>
 <script src="./openverse-api.js"></script>
 </html>
