added favourite landing pages and updated the other pages to call it

--- a/Frontend/Pages/login.html
+++ b/Frontend/Pages/login.html
@@ -45,9 +45,9 @@
         </div>
     </div>
 
-    <script src="./api-js.js"></script>
+    <script src="../javascript/api.js"></script>
     <script>
-        import { loginUser } from './auth-controller.js';
+        import { loginUser } from '../backend/controllers/auth-controller.js';
         document.addEventListener('DOMContentLoaded', () => {
             const loginForm = document.getElementById('loginForm');
             const oauthButton = document.getElementById('oauthButton');
