updated pages and javascript

--- a/Frontend/Pages/index.html
+++ b/Frontend/Pages/index.html
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header class="header">
         <div class="logo-section">
-            <i class="fas fa-bars menu-icon"></i>
+            <i class="fas fa-bars menu-icon" onclick="myFunction()"></i>
             <div class="logo">CarSearch</div>
         </div>
         <div class="search-section">
@@ -66,7 +66,7 @@
     <!-- Car Cards -->
     <div class="car-card">
         <div class="car-image">
-            <img src="/api/placeholder/300/200" alt="Car 1">
+            <img src="../images/tesla-model-3-2024.webp" alt="Car 1">
         </div>
         <div class="car-details">
             <div class="car-title">2024 Tesla Model 3</div>
@@ -76,7 +76,7 @@
 
     <div class="car-card">
         <div class="car-image">
-            <img src="/api/placeholder/300/200" alt="Car 2">
+            <img src="../images/BMW-X5-2024.jpg" alt="Car 2">
         </div>
         <div class="car-details">
             <div class="car-title">2024 BMW X5</div>
@@ -86,7 +86,7 @@
 
     <div class="car-card">
         <div class="car-image">
-            <img src="/api/placeholder/300/200" alt="Car 3">
+            <img src="../images/2024-Honda-Accord.png" alt="Car 3">
         </div>
         <div class="car-details">
             <div class="car-title">2024 Honda Accord</div>
@@ -96,7 +96,7 @@
     
     <div class="car-card">
         <div class="car-image">
-            <img src="/api/placeholder/300/200" alt="Car 4">
+            <img src="../images/2024-Porsche-911.png" alt="Car 4">
         </div>
         <div class="car-details">
             <div class="car-title">2024 Porsche 911</div>
