--- a/Frontend/Pages/registration.html
+++ b/Frontend/Pages/registration.html
@@ -54,7 +54,7 @@
     </div>
 
     <script src="../javascript/api.js"></script>
-    <script>
+    <script type="module">
         import { registerUser } from '../backend/controllers/auth-controller.js' ;
         document.addEventListener('DOMContentLoaded', () => {
             const registrationForm = document.getElementById('registrationForm');
