updated login and registration to ensure google sign in is functional

--- a/Frontend/Pages/login.html
+++ b/Frontend/Pages/login.html
@@ -35,7 +35,7 @@
                 <span>OR</span>
             </div>
             
-            <button type="button" id="oauthButton" class="oauth-button">
+           <button onclick="api.initiateOAuthLogin()" id="oauthButton" class="oauth-button">
                 <i class="fab fa-google"></i> Login with Google
             </button>
             
