--- a/Frontend/Pages/registration.html
+++ b/Frontend/Pages/registration.html
@@ -43,7 +43,7 @@
                 <span>OR</span>
             </div>
             
-            <button type="button" id="oauthButton" class="oauth-button">
+            <button onclick="api.initiateOAuthLogin()" id="oauthButton" class="oauth-button">
                 <i class="fab fa-google"></i> Register with Google
             </button>
             
