--- a/Frontend/Pages/login.html
+++ b/Frontend/Pages/login.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - CarSearch</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <!-- Header -->
     <header class="header">
         <div class="logo-section">
-            <a href='./index.html'><div class="logo">CarSearch</div></a>
+            <a href='/index.html'><div class="logo">CarSearch</div></a>
         </div>
     </header>
 
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <script src="../javascript/api.js"></script>
+    <script src="/javascript/api.js"></script>
     <script type="module">
         document.addEventListener('DOMContentLoaded', () => {
             const loginForm = document.getElementById('loginForm');
